--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="./assets/logofavicon.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/logofavicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/logofavicon.png">
+    <link rel="apple-touch-icon" href="./assets/logofavicon.png" />
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CCTV Purwakarta - Dashboard Monitoring</title>
     <style>
